--- a/configs/qwen2_5/int4_gptaq/qwen2_5-32b_int4_gptaq.yaml
+++ b/configs/qwen2_5/int4_gptaq/qwen2_5-32b_int4_gptaq.yaml
@@ -16,7 +16,7 @@ model:
 compression:
   name: PTQ
   quantization:
-    name: int4_gptaq     # Supported: fp8_static, fp8_dynamic, int4_awq, int4_gptq
+    name: int4_gptaq     # Supported: fp8_static, fp8_dynamic, int4_awq, int4_gptq, int4_gptaq
     bits: 4                # Quantization bits (4/8)
     quant_method:
       weight: "per-group"
