add attn_implementation in model config;fix deepseekv3.1-terminus load error (#130)

--- a/configs/qwen3_omni/fp8_dynamic/qwen3_omni_fp8_dynamic.yaml
+++ b/configs/qwen3_omni/fp8_dynamic/qwen3_omni_fp8_dynamic.yaml
@@ -12,6 +12,7 @@ model:
   torch_dtype: auto
   device_map: auto
   use_audio_in_video: false
+  attn_implementation: default
 
 # Compression configuration
 compression:
