--- a/configs/qwen3_omni/fp8_static/qwen3_omni_fp8_static.yaml
+++ b/configs/qwen3_omni/fp8_static/qwen3_omni_fp8_static.yaml
@@ -12,6 +12,7 @@ model:
   torch_dtype: auto
   device_map: auto
   use_audio_in_video: false
+  attn_implementation: default
 
 # Compression configuration
 compression:
