--- a/configs/qwen3_vl/fp8_static/qwen3_vl-30b_a3b_fp8_static.yaml
+++ b/configs/qwen3_vl/fp8_static/qwen3_vl-30b_a3b_fp8_static.yaml
@@ -17,6 +17,7 @@ compression:
   name: PTQ
   quantization:
     name: fp8_static
+    save_name: fp8
     bits: 8
     quant_method:
       weight: "per-tensor"
